--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
     "firebase": "^9.10.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -48,6 +45,10 @@
   },
   "devDependencies": {
     "@types/uuid": "^8.3.4",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
